<resources>
    <string name="app_name">RUApp</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="register">Registrar-se</string>
    <string name="insert_name">Insira seu nome</string>
    <string name="insert_password">Insira sua senha</string>
    <string name="insert_password_again">Insira sua senha novamente</string>
    <string name="insert_id">Insira seu CPF</string>
    <string name="insert_email">Insira seu email</string>
    <string name="insert_ufal_id">Insira seu número de matrícula</string>
    <string name="name">Nome</string>
    <string name="social_id">CPF</string>
    <string name="ufal_id">Número de matrícula</string>
    <string name="email">Email</string>
    <string name="request_register">Solicitar registro</string>
    //
    <string name="greetings">Olá, </string>
    <string name="see_menu">Ver Menu</string>
    <string name="book">Agendamento</string>
    <string name="LUNCH">ALMOÇO</string>
    <string name="DINNER">JANTAR</string>
    <string name="SHIFT">TURNO</string>
    <string name="registration_request">Solicitações de Registro</string>
    <string name="add_menu">Atualizar menu</string>
    <string name="adm_menu">ADM MENU</string>
    <string name="invalid_input">Entrada inválida</string>
    <string name="insert_date">Clique e insira a data:</string>
    <string name="report_at_date">Relatório do dia:</string>
    <string name="next">Próximo</string>
    <string name="back">Voltar</string>
    <string name="see_report">Ver Relatório</string>
    <string name="selected_date_tv">Data selecionada</string>
    <string name="unschedule_this_day_bt">Cancelar agendamento</string>
    <string name="schedule_this_day_bt">Fazer agendamento</string>
    <string name="show_calendar_bt">Mostrar calendário</string>
    <string name="lunch_cb">Almoço</string>
    <string name="dinner_cb">Jantar</string>


</resources>
